Mon Oct  6 16:07:11 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/ruby/test_string.rb (test_LSHIFT_neary_long_max): enable
	  only on platforms where string size range is smaller than memory
	  space.  this test does not make sense but just wastes memory and
	  time on other platforms, as it is hardly possible that a string
	  size becomes neary LONG_MAX if long size equals pointer size.
	  [ruby-core:65410] [Bug #10325]

Mon Oct  6 11:21:21 2014  Martin Duerst <duerst@it.aoyama.ac.jp>

	* tool/unicode_norm_gen.rb: Adding/tweaking comments.

Mon Oct  6 10:57:57 2014  Martin Duerst <duerst@it.aoyama.ac.jp>

	* tool/unicode_norm_gen.rb: Adjusted directory paths.

Mon Oct  6 10:27:27 2014  Martin Duerst <duerst@it.aoyama.ac.jp>

	* tool/unicode_norm_gen.rb: Data generation script imported from
	  https://github.com/duerst/eprun/blob/master/lib/generate.rb

Mon Oct  6 10:15:15 2014  Martin Duerst <duerst@it.aoyama.ac.jp>

	* tool/downloader.rb: Adjust example in documentation for
	  Downloader.download.

Mon Oct  6 10:07:07 2014  Martin Duerst <duerst@it.aoyama.ac.jp>

	* lib/unicode_normalize: New folder for Unicode normalization
	  functionality

Sun Oct  5 11:04:13 2014  Luiz Angelo Daros de Luca  <luizluca@gmail.com>

	* ext/digest/{md5,rmd160,sha1,sha2}/extconf.rb: configure OpenSSL
	  only if bundled libraries is not used, so that OpenSSL is not
	  linked unnecessarily.  [ruby-core:65404] [Bug #10324]

Sun Oct  5 10:39:11 2014  Luiz Angelo Daros de Luca  <luizluca@gmail.com>

	* ext/digest/rmd160/extconf.rb: fix transform function name to
	  check.  [ruby-core:65091] [Bug #10252]

Sun Oct  5 05:46:00 2014  Eric Wong  <e@80x24.org>

	* ext/zlib/zlib.c (zstream_mark, zstream_free): update signature
	  (gzfile_mark, gzfile_free): ditto
	  (zstream_memsize): new function for rb_data_type->dsize
	  (gzfile_memsize): ditto
	  (zstream_data_type, gzfile_data_type): new data types
	  (zstream_new): Data_Make_Struct => TypedData_Make_Struct
	  (gzfile_new): ditto